line divider aligned centrally

--- a/game2.html
+++ b/game2.html
@@ -36,17 +36,20 @@ AVAILABLE NOW</h1>
       <p id="small" align="center">You've been invited to receive news and updates about the Harry Potter: Hogwarts Mystery mobile game up to and beyond the release.
       </p>
     </div>
-    <div class="divider">
-    <img src="img/line.jpg" alt=""></div>
+    <div id="divider" class="row">
+      <img src="img/line.jpg" alt=""></div>
     <div class="container">
       <h2><p align="center">TRAILER</h2></p>
       <iframe width="1000" height="600" src="https://www.youtube.com/embed/ehixbGzOZ_M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>
     </div>
-
+    <div id="divider" class="row">
+      <img src="img/line.jpg" alt=""></div>
     <div class="row">
       <p>What Is Harry Potter: Hogwarts Mystery? Harry Potter: Hogwarts Mystery is the first game in which players can create their own character and experience life as a Hogwarts student. The game will launch under Portkey Games, from Warner Bros. Interactive
         Entertainment, the games label dedicated to creating new Wizarding World mobile and video game experiences that place the player at the centre of their own adventure, inspired by J.K. Rowling’s original stories.</p>
     </div>
+    <div id="divider" class="row">
+      <img src="img/line.jpg" alt=""></div>
     <div class="row">
       <p>Game Features</p>
     </div>
@@ -93,11 +96,15 @@ AVAILABLE NOW</h1>
         and adventures!
       </div>
     </div>
-    <div class="row">
-      <p>Want More Content on Harry Potter: Hogwarts Mystery? Follow us on:
+    <div id="divider" class="row">
+      <img src="img/line.jpg" alt=""></div>
+
+      <p align="center">Want More Content on
+Harry Potter: Hogwarts Mystery?
+Follow us on:
         <a href="#" class="fa fa-facebook"></a> <a href="#" class="fa fa-twitter"></a> <a href="#" class="fa fa-instagram"></a>
       </p>
-    </div>
+
     <div class="row" id="row-1">
       <div class="col-md-1"><img src="img/wizard.jpg" alt="Wizard World"></div>
       <div class="col-md-1"><img src="img/jamcity.jpg" alt="Jam city"></div>
