--- a/game3.html
+++ b/game3.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Cardo" rel="stylesheet">
   <link rel="stylesheet" href="css/game3.css">
   <title>Angry Birds Game</title>
 </head>
@@ -13,7 +14,7 @@
 <body>
   <nav></nav>
   <div class="top-image">
-    <a href="#"><button><ion-icon name="arrow-down"></ion-icon>DOWNLOAD</button></a>
+    <a href="https://play.google.com/store/apps/details?id=com.rovio.baba"><button><ion-icon name="arrow-down"></ion-icon>DOWNLOAD</button></a>
   </div>
   <div class="game-description">
     <div class="container">
@@ -21,7 +22,7 @@
         <div class="col-md-2">
           <img src="img/cimg.jpg" alt="">
         </div>
-        <div class="col-md-8">
+        <div class="col-md-10 content">
           <h1>ANGRY BIRDS</h1>
           <p>The survival of the Angry Birds is at stake. Dish out revenge on the greedy pigs who stole their eggs. Use the unique powers of each bird to destroy the pigs’ defenses. Angry Birds features challenging physics-based gameplay and hours of replay
             value. Each level requires logic, skill and force to solve.</p>
@@ -29,18 +30,19 @@
       </div>
       <div class="row" id="second-row">
         <div class="col-md-2">
-          <img src="img/android.png" alt="">
-          <img src="img/app-store-logo.png" alt="">
+          <a href="https://play.google.com/store/apps/details?id=com.rovio.baba" target="_blank"><img src="img/android.png" alt=""></a>
+          <a href="https://itunes.apple.com/us/app/ab-classic/id343200656?mt=8" target="_blank"><img src="img/app-store-logo.png" alt=""></a>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-10 content">
           <p>Download Angry Birds at the App Store or Google Play for free today</p>
         </div>
       </div>
+
       <div class="row" id="third-row">
         <div class="col-md-2">
-          <img src="img/amazon.png" alt="">
+          <a href="https://www.amazon.com/Rovio-Entertainment-Ltd-Angry-Birds/dp/B004SJ3BCI" target="_blank"><img src="img/amazon.png" alt=""></a>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-10 content">
           <h3>Features</h3>
           <ul>
             <li>Never-ending fun with dozens of unique levels</li>
@@ -50,14 +52,56 @@
           </ul>
         </div>
       </div>
+      <h2>VIDEO</h2>
       <iframe width="560" height="315" src="https://www.youtube.com/embed/hqBT05dqmKc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      <div class="row">
+        <h2>GAME SCREENSHOTS</h2>
+      </div>
+      <div id="demo" class="carousel slide" data-ride="carousel">
+
+        <!-- Indicators -->
+        <ul class="carousel-indicators">
+          <li data-target="#demo" data-slide-to="0" class="active"></li>
+          <li data-target="#demo" data-slide-to="1"></li>
+          <li data-target="#demo" data-slide-to="2"></li>
+          <li data-target="#demo" data-slide-to="3"></li>
+          <li data-target="#demo" data-slide-to="4"></li>
+        </ul>
+
+        <!-- The slideshow -->
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/sc1.png" alt="Los Angeles" style="height:500px; width:100%;">
+          </div>
+          <div class="carousel-item">
+            <img src="img/sc2.jpg" alt="Chicago" style="height:500px;width:100%;">
+          </div>
+          <div class="carousel-item">
+            <img src="img/sc3.jpeg" alt="New York" style="height:500px;width:100%;">
+          </div>
+          <div class="carousel-item">
+            <img src="img/sc4.jpeg" alt="Los Angeles" style="height:500px; width:100%;">
+          </div>
+          <div class="carousel-item">
+            <img src="img/sc5.jpeg" alt="Los Angeles" style="height:500px; width:100%;">
+          </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="carousel-control-prev" href="#demo" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+        <a class="carousel-control-next" href="#demo" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+
+      </div>
     </div>
-  </div>
-  <script src="https://unpkg.com/ionicons@4.2.4/dist/ionicons.js"></script>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
-  <script src="js/scripts.js"></script>
+    <script src="https://unpkg.com/ionicons@4.2.4/dist/ionicons.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
