--- a/about.html
+++ b/about.html
@@ -4,15 +4,91 @@
 <head>
 
   <title>Gaming landing page</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Cardo" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-  <link href="css/about.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
   <script src="js/jquery.js"></script>
   <script src="js/scripts.js"></script>
 </head>
 
 <body>
-  <h1>WHO WE ARE</h1>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <h1 id="komo"><u>WHO WE ARE</u></h1>
+  <!-- <div class="container"> -->
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
 
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+
+      <div class="item active">
+        <img src="img/o.jpeg" alt="Los Angeles" style="width:100%;"id="pik">
+        <div class="carousel-caption">
+          <h3>GAME CITY</h3>
+          <p>GAME CITY DEVELOPERS</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="img/f.jpeg" alt="Chicago" style="width:100%;"id="pik">
+        <div class="carousel-caption">
+          <h3>GAME CITY</h3>
+          <p>GAME CITY DEVELOPERS</p>
+        </div>
+      </div>
+
+      <div class="item">
+        <img src="img/n.jpeg" alt="New York" style="width:100%;"id="pik">
+        <div class="carousel-caption">
+          <h3> GAME CITY</h3>
+          <p>GAME CITY DEVELOPERS</p>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+<br><br><br>
+<h4><strong><u>ABOUT</u></strong></h4>
+<strong><p id="mike">Game City is a global leader in mobile entertainment, providing social gaming experiences for millions<br> of players around the world.
+
+Game City is the creative powerhouse behind some of<br> the highest grossing and most enduring social gaming franchises for mobile, <br>including Cookie Jam (a Facebook “Game of the Year” winner) and Panda Pop.
+
+<br>Game City is the go-to studio for Hollywood, having developed immersive,<br> narrative-rich mobile games for iconic entertainment brands including Harry Potter and Family Guy<br>Jam City’s diverse and multi-faceted team is known for its creative<br> excellence and technological innovation in areas including storytelling,<br> data science and consumer insights.</p></strong>
+
+<div class="row"id="sum">
+  <div class="col-ms-4">
+  <img src="img/dev1.jpeg">
+  <img src="img/dev2.jpeg">
+  <img src="img/dev4.jpeg">
+  <p>our developers</p>
+  </div>
+</div>
+<br><br>
+<h id="sik"><u/>YOU CAN FIND US ON ;</u></h>
+<div col-ms-12 id="cup">
+  <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+  <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+<a href="https://www.amazon.com" target="_blank">  <i class="fab fa-amazon"></i></a>
+  <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+</div>
   </body>
 </html>
