styling for last paragraph

--- a/game2.html
+++ b/game2.html
@@ -85,7 +85,7 @@ AVAILABLE NOW</h1>
         </p>
       </div>
       <div class="col-md-6">
-        <img src="img/spells.jpg" alt="hogwarts school">
+        <img src="img/spells.jpeg" alt="hogwarts school">
       </div>
     </div>
     <div class="row">
@@ -99,18 +99,19 @@ AVAILABLE NOW</h1>
     <div id="divider" class="row">
       <img src="img/line.jpg" alt=""></div>
 
-      <p align="center">Want More Content on
-Harry Potter: Hogwarts Mystery?
-Follow us on:
-        <a href="#" class="fa fa-facebook"></a> <a href="#" class="fa fa-twitter"></a> <a href="#" class="fa fa-instagram"></a>
-      </p>
+    <p id="caps" align="center">
+      <h3><p id="caps" align="center">Want More Content on</h3>
+      <h2><p id="caps" align="center"><strong>Harry Potter: Hogwarts Mystery?<strong></h2>
+      <h3><p id="caps" align="center">Follow us on:</h3></p>
+    <p id="fret" align="center"><a href="#" class="fa fa-facebook"></a> <a href="#" class="fa fa-twitter"></a> <a href="#" class="fa fa-instagram"></a>
+    </p>
 
     <div class="row" id="row-1">
       <div class="col-md-1"><img src="img/wizard.jpg" alt="Wizard World"></div>
       <div class="col-md-1"><img src="img/jamcity.jpg" alt="Jam city"></div>
       <div class="col-md-8">
-        <p id="small">* By entering my email address I agree to the Terms of Service and Privacy Policy.</p>
-        <p align="center">
+        <p align="center" id="small">* By entering my email address I agree to the Terms of Service and Privacy Policy.</p>
+        <p align="center" id="bolder">
           HARRY POTTER: HOGWARTS MYSTERY software © 2018 Jam City, Inc. Developed by Jam City. Jam City® and the Jam City Logo are registered and/or unregistered trademarks of Jam City, Inc. WIZARDING WORLD, HARRY POTTER and FANTASTIC BEASTS Publishing Rights ©
           J.K. Rowling. PORTKEY GAMES, HARRY POTTER: HOGWARTS MYSTERY, WIZARDING WORLD, HARRY POTTER and FANTASTIC BEASTS characters, names and related indicia © and ™ Warner Bros. Entertainment Inc. All Rights Reserved. WBIE LOGO, WB SHIELD:™ & © Warner
           Bros. Entertainment Inc.</p>
