day one changes

--- a/game2.html
+++ b/game2.html
@@ -58,7 +58,7 @@ AVAILABLE NOW</h1>
         <img src="img/hogwarts.jpg" alt="hogwarts school">
       </div>
       <div class="col-md-6">
-        <p>Live your Hogwarts Experience Get ready to begin your Hogwarts story where you will be able to attend Hogwarts School of Witchcraft and Wizardry! Progress as a student through all seven years at Hogwarts, and learn to master everything from flying,
+        <p id="boop">Live your Hogwarts Experience Get ready to begin your Hogwarts story where you will be able to attend Hogwarts School of Witchcraft and Wizardry! Progress as a student through all seven years at Hogwarts, and learn to master everything from flying,
           Transfiguration, potion brewing and more!</p>
       </div>
     </div>
