--- a/game2.html
+++ b/game2.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/game2.css">
@@ -42,65 +44,77 @@ AVAILABLE NOW</h1>
       <h2><p align="center">TRAILER</h2></p>
       <iframe width="1000" height="600" src="https://www.youtube.com/embed/ehixbGzOZ_M" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>
     </div>
-    <div id="divider" class="row">
-      <img src="img/line.jpg" alt=""></div>
-    <div class="row">
-      <p>What Is Harry Potter: Hogwarts Mystery? Harry Potter: Hogwarts Mystery is the first game in which players can create their own character and experience life as a Hogwarts student. The game will launch under Portkey Games, from Warner Bros. Interactive
+    <div id="divider" class="row"><br>
+          <img src="img/line.jpg" alt=""></div>
+    <div class="container">
+      <h3 id="aha" align="center">What Is </h3>
+      <h2 id="aha" align="center">Harry Potter: Hogwarts Mystery?</h2><br>
+      <p align="center"> Harry Potter: Hogwarts Mystery is the first game in which players can create their own character and experience life as a Hogwarts student. The game will launch under Portkey Games, from Warner Bros. Interactive
         Entertainment, the games label dedicated to creating new Wizarding World mobile and video game experiences that place the player at the centre of their own adventure, inspired by J.K. Rowling’s original stories.</p>
     </div>
     <div id="divider" class="row">
       <img src="img/line.jpg" alt=""></div>
-    <div class="row">
-      <p>Game Features</p>
+    <div id="divi" class="row">
+        <p align="center"><h2>GAME FEATURES</h2></p>
     </div>
-    <div class="row">
-      <div class="col-md-6">
-        <img src="img/hogwarts.jpg" alt="hogwarts school">
+    <div class="container">
+    <div class="row" id="boop">
+      <div class="col-md-5">
+        <img src="img/hogwarts.jpg" alt="hogwarts school" id="blur">
       </div>
-      <div class="col-md-6">
-        <p id="boop">Live your Hogwarts Experience Get ready to begin your Hogwarts story where you will be able to attend Hogwarts School of Witchcraft and Wizardry! Progress as a student through all seven years at Hogwarts, and learn to master everything from flying,
+      <div class="col-md-7">
+        <p><h3 id="try">Live your Hogwarts Experience</h3>Get ready to begin your Hogwarts story where you will be able to attend Hogwarts School of Witchcraft and Wizardry! Progress as a student through all seven years at Hogwarts, and learn to master everything from flying,
           Transfiguration, potion brewing and more!</p>
       </div>
     </div>
+  </div>
+  <div class="container">
     <div class="row">
-      <div class="col-md-6">
-        <p>Customize Your Character Create your own in-game character as a Hogwarts student with our avatar creator! From hairstyle to casual outfits worn outside classes, you can customize the details of your character.</p>
+      <div class="col-md-5">
+        <p><h3 id="try">Customize Your Character</h3> Create your own in-game character as a Hogwarts student with our avatar creator! From hairstyle to casual outfits worn outside classes, you can customize the details of your character.</p>
       </div>
-      <div class="col-md-6">
-        <img src="img/owned.jpg" alt="hogwarts school">
+      <div class="col-md-5">
+        <img src="img/owned.jpg" alt="hogwarts school" id="blur">
       </div>
     </div>
+  </div>
+  <div class="container">
     <div class="row">
-      <div class="col-md-6">
-        <img src="img/whichhouse.jpg" alt="hogwarts school">
+      <div class="col-md-5">
+        <img src="img/whichhouse.jpg" alt="hogwarts school" id="blur">
       </div>
-      <div class="col-md-6">
-        <p>Choose Your Hogwarts House Are you a brave Gryffindor, an ambitious Slytherin, a witty Ravenclaw, or a loyal Hufflepuff? In Harry Potter: Hogwarts Mystery, you will be able to select the house you feel you most identify with.</p>
+      <div class="col-md-5">
+        <p><h3 id="try">Choose Your Hogwarts House</h3> Are you a brave Gryffindor, an ambitious Slytherin, a witty Ravenclaw, or a loyal Hufflepuff? In Harry Potter: Hogwarts Mystery, you will be able to select the house you feel you most identify with.</p>
       </div>
     </div>
+  </div>
+  <div class="container">
     <div class="row">
-      <div class="col-md-6">
-        <p>Learn New Spells & Potions Attend classes at Hogwarts and learn to cast spells, brew potions and more! Brew potions under Professor Snape’s critical eye, master Transfiguration with Professor McGonagall, and learn Charms from the esteemed Professor
+      <div class="col-md-5">
+        <p><h3 id="try">Learn New Spells & Potions</h3> Attend classes at Hogwarts and learn to cast spells, brew potions and more! Brew potions under Professor Snape’s critical eye, master Transfiguration with Professor McGonagall, and learn Charms from the esteemed Professor
           Flitwick. This is your chance to finally become the witch or wizard you aspire to be!
         </p>
       </div>
-      <div class="col-md-6">
-        <img src="img/spells.jpeg" alt="hogwarts school">
+      <div class="col-md-5">
+        <img src="img/spells.jpeg" alt="hogwarts school" id="blur">
       </div>
     </div>
+  </div>
+  <div class="container">
     <div class="row">
-      <div class="col-md-6">
-        <img src="img/friends1.jpg" alt="hogwarts school">
+      <div class="col-md-5">
+        <img src="img/friends1.jpg" alt="hogwarts school" id="blur">
       </div>
-      <div class="col-md-6">Create Lasting Friendships Throughout your journey at Hogwarts, you will meet many new and familiar faces, such as Bill Weasley and Nymphadora Tonks. Bond with your housemates and fellow students, compete for the House Cup, and go on exciting quests
-        and adventures!
+      <div class="col-md-5"><p><h3 id="try">Create Lasting Friendships</h3> Throughout your journey at Hogwarts, you will meet many new and familiar faces, such as Bill Weasley and Nymphadora Tonks. Bond with your housemates and fellow students, compete for the House Cup, and go on exciting quests
+        and adventures!</p>
       </div>
     </div>
+  </div>
     <div id="divider" class="row">
       <img src="img/line.jpg" alt=""></div>
 
     <p id="caps" align="center">
-      <h3><p id="caps" align="center">Want More Content on</h3>
+      <h3><p id="caps" align="center">Want More Content On</h3>
       <h2><p id="caps" align="center"><strong>Harry Potter: Hogwarts Mystery?<strong></h2>
       <h3><p id="caps" align="center">Follow us on:</h3></p>
     <p id="fret" align="center"><a href="#" class="fa fa-facebook"></a> <a href="#" class="fa fa-twitter"></a> <a href="#" class="fa fa-instagram"></a>
