--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title >Game Landing Page</title>
+	<title>Game Landing Page</title>
 	<link rel="icon" href="img/title.png" type="image/x-icon">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
 	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
 	<link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
@@ -19,87 +19,100 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
 		<div class="container-fluid">
-<a class="navbar-brand" href="#"> <img src="img/logo.png" alt="logo"></a>
-<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+			<a class="navbar-brand" href="#"> <img src="img/logo.png" alt="logo"></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 	<span class="navbar-toggler-icon"></span>
 </button>
-<div class="collapse navbar-collapse" id="navbarResponsive">
-	<ul class="navbar-nav ml-auto">
-		<li class="nav-item active">
-			<a class="nav-link" href="#">Home</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="#">Games</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="#">About Us</a>
-		</li>
-		<li class="nav-item">
-			<a class="nav-link" href="#">Support</a>
-		</li>
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item active">
+						<a class="nav-link" href="#">Home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Games</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">About Us</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#">Support</a>
+					</li>
 
-	</ul>
+				</ul>
 
-</div>
+			</div>
 		</div>
 	</nav>
 
-	<!--- Image Slider -->
+	<!--- Image Carousel -->
 	<div id="slides" class="carousel slide" data-ride="carousel">
-	  <ol class="carousel-indicators">
-	    <li data-target="#slides" data-slide-to="0" class="active"></li>
-	    <li data-target="#slides" data-slide-to="1"></li>
-	    <li data-target="#slides" data-slide-to="2"></li>
+		<ol class="carousel-indicators">
+			<li data-target="#slides" data-slide-to="0" class="active"></li>
+			<li data-target="#slides" data-slide-to="1"></li>
+			<li data-target="#slides" data-slide-to="2"></li>
 			<li data-target="#slides" data-slide-to="3"></li>
 			<li data-target="#slides" data-slide-to="4"></li>
 			<li data-target="#slides" data-slide-to="5"></li>
 			<li data-target="#slides" data-slide-to="6"></li>
 
-	  </ol>
-	  <div class="carousel-inner" role="listbox">
-	    <div class="carousel-item active">
+		</ol>
+		<div class="carousel-inner" role="listbox">
+			<div class="carousel-item active">
 				<a href="https://play.google.com/store/apps/details?id=com.rovio.baba">
 	      <img class="d-block img-fluid" src="img/carousel/bannerab.jpg" alt="First slide" style="width:100%;">
 			</a>
 
-	    </div>
-	    <div class="carousel-item">
-	      <img class="d-block img-fluid" src="img/carousel/bannerfifa.jpg" alt="Second slide" style="width:100%;">
-	    </div>
-	    <div class="carousel-item">
-	      <img class="d-block img-fluid" src="img/carousel/bannersubway.jpg" alt="Third slide" style="width:100%;">
-	    </div>
+			</div>
 			<div class="carousel-item">
-	      <img class="d-block img-fluid" src="img/carousel/banner2k.png" alt="Third slide" style="width:100%;">
-	    </div>
+				<img class="d-block img-fluid" src="img/carousel/bannerfifa.jpg" alt="Second slide" style="width:100%;">
+			</div>
 			<div class="carousel-item">
-	      <img class="d-block img-fluid" src="img/carousel/bannerdrag.jpg" alt="Third slide" style="width:100%;">
-	    </div>
+				<img class="d-block img-fluid" src="img/carousel/bannersubway.jpg" alt="Third slide" style="width:100%;">
+			</div>
 			<div class="carousel-item">
-	      <img class="d-block img-fluid" src="img/carousel/bannerclash.jpg" alt="Third slide" style="width:100%;">
-	    </div>
+				<img class="d-block img-fluid" src="img/carousel/banner2k.png" alt="Third slide" style="width:100%;">
+			</div>
 			<div class="carousel-item">
-	      <img class="d-block img-fluid" src="img/carousel/bannerhp.png" alt="Third slide" style="width:100%;">
-	    </div>
-	  </div>
-	  <a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
+				<img class="d-block img-fluid" src="img/carousel/bannerdrag.jpg" alt="Third slide" style="width:100%;">
+			</div>
+			<div class="carousel-item">
+				<img class="d-block img-fluid" src="img/carousel/bannerclash.jpg" alt="Third slide" style="width:100%;">
+			</div>
+			<div class="carousel-item">
+				<img class="d-block img-fluid" src="img/carousel/bannerhp.png" alt="Third slide" style="width:100%;">
+			</div>
+		</div>
+		<a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
 	    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
 	    <span class="sr-only">Previous</span>
 	  </a>
-	  <a class="carousel-control-next" href="#slides" role="button" data-slide="next">
+		<a class="carousel-control-next" href="#slides" role="button" data-slide="next">
 	    <span class="carousel-control-next-icon" aria-hidden="true"></span>
 	    <span class="sr-only">Next</span>
 	  </a>
 	</div>
 
-	<!--- Jumbotron -->
+	<!--- Jumbotron Games Header -->
+<div class="container-fluid">
+	<div class="row jumbotron">
+<div class="col-xs-12 col-sm-12 col-md-9 col-xl-10">
+	<h1 id="heading1">GAMES</h1>
+
+</div>
+	</div>
+
+</div>
 
 
-	<!--- Welcome Section -->
-
-
-	<!--- Three Column Section -->
-
+	<!--- Three Column Section Games  -->
+<div class="container-fluid padding">
+<div class="row text-center padding">
+<div class="col-xs-12 col-sm-6 col-md-4">
+	<img src="" alt="">
+</div>
+</div>
+<hr class="my-4">
+</div>
 
 	<!--- Two Column Section -->
 
