--- a/index.html
+++ b/index.html
@@ -108,8 +108,58 @@
 <div class="container-fluid padding">
 <div class="row text-center padding">
 <div class="col-xs-12 col-sm-6 col-md-4">
-	<img src="" alt="">
+	<img src="img/icons/ab.png" >
+<h3>Subway Surfers</h3>
 </div>
+<div class="col-xs-12 col-sm-6 col-md-4">
+	<img src="img/icons/fifa.png" >
+<h3>Subway Surfers</h3>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-4">
+	<img src="img/icons/hp.png" >
+<h3>Subway Surfers</h3>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-4">
+	<img src="img/icons/2k.png" >
+<h3>Subway Surfers</h3>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-4">
+	<img src="img/icons/bike.png" >
+<h3>Subway Surfers</h3>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-4">
+	<img src="img/icons/cc.png" >
+<h3>Subway Surfers</h3>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-4">
+	<img src="img/icons/cr.png" >
+<h3>Subway Surfers</h3>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-4">
+	<img src="img/icons/cs.png" >
+<h3>Subway Surfers</h3>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-4">
+	<img src="img/icons/pool.png" >
+<h3>Subway Surfers</h3>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-4">
+	<img src="img/icons/shooter.png" >
+<h3>Subway Surfers</h3>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-4">
+	<img src="img/icons/sniper.png" >
+<h3>Subway Surfers</h3>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-4">
+	<img src="img/icons/sub.png" >
+<h3>Subway Surfers</h3>
+</div>
+<div class="col-xs-12 col-sm-6 col-md-4">
+	<img src="img/icons/word.png" >
+<h3>Subway Surfers</h3>
+</div>
+
 </div>
 <hr class="my-4">
 </div>
