formatted icons and naming

--- a/index.html
+++ b/index.html
@@ -109,47 +109,47 @@
 <div class="row text-center padding">
 <div class="col-xs-12 col-sm-6 col-md-4">
 	<img src="img/icons/ab.png" >
-<h3>Subway Surfers</h3>
+<h3>Angry Birds</h3>
 </div>
 <div class="col-xs-12 col-sm-6 col-md-4">
 	<img src="img/icons/fifa.png" >
-<h3>Subway Surfers</h3>
+<h3>Fifa</h3>
 </div>
 <div class="col-xs-12 col-sm-6 col-md-4">
 	<img src="img/icons/hp.png" >
-<h3>Subway Surfers</h3>
+<h3>Harry Potter</h3>
 </div>
 <div class="col-xs-12 col-sm-6 col-md-4">
 	<img src="img/icons/2k.png" >
-<h3>Subway Surfers</h3>
+<h3>NBA 2k18</h3>
 </div>
 <div class="col-xs-12 col-sm-6 col-md-4">
 	<img src="img/icons/bike.png" >
-<h3>Subway Surfers</h3>
+<h3>Bike Racing</h3>
 </div>
 <div class="col-xs-12 col-sm-6 col-md-4">
 	<img src="img/icons/cc.png" >
-<h3>Subway Surfers</h3>
+<h3>Candy Crush</h3>
 </div>
 <div class="col-xs-12 col-sm-6 col-md-4">
 	<img src="img/icons/cr.png" >
-<h3>Subway Surfers</h3>
+<h3>Clash Royale</h3>
 </div>
 <div class="col-xs-12 col-sm-6 col-md-4">
 	<img src="img/icons/cs.png" >
-<h3>Subway Surfers</h3>
+<h3>Candy Sweet</h3>
 </div>
 <div class="col-xs-12 col-sm-6 col-md-4">
 	<img src="img/icons/pool.png" >
-<h3>Subway Surfers</h3>
+<h3>8 Ball Pool</h3>
 </div>
 <div class="col-xs-12 col-sm-6 col-md-4">
 	<img src="img/icons/shooter.png" >
-<h3>Subway Surfers</h3>
+<h3>Shooter</h3>
 </div>
 <div class="col-xs-12 col-sm-6 col-md-4">
 	<img src="img/icons/sniper.png" >
-<h3>Subway Surfers</h3>
+<h3>Sniper</h3>
 </div>
 <div class="col-xs-12 col-sm-6 col-md-4">
 	<img src="img/icons/sub.png" >
@@ -157,7 +157,7 @@
 </div>
 <div class="col-xs-12 col-sm-6 col-md-4">
 	<img src="img/icons/word.png" >
-<h3>Subway Surfers</h3>
+<h3>Word Cross</h3>
 </div>
 
 </div>
