--- a/index.html
+++ b/index.html
@@ -165,7 +165,42 @@
 </div>
 
 	<!--- Two Column Section -->
+<div class="row jumbotron">
+	<div class="col-md-6">
+		<h2>Report a problem</h2>
+<form id="complaint">
+<div class="form-group">
+	<label for="Your Name">Your Name</label>
+	<input type="text" class="form-control" id="name" placeholder="Name">
+	<label for="Email">Email</label>
+	<input type="text" class="form-control" id="email" placeholder="Your Email">
+	<label for="Email">Subject</label>
+	<input type="text" class="form-control" id="subject">
+	<label for="Email">Message</label>
+	<input type="text" class="form-control" id="message" placeholder="Describe the issue">
+</div>
+<button type="submit" class="btn btn-success">Submit</button>
+</form>
+</div>
 
+<div class="col-md-6">
+	<h2>Subscribe for new games</h2>
+<form id="subscribe">
+<div class="form-group">
+<label for="Your Name">Your Email</label>
+<input type="text" class="form-control" id="emailSub" placeholder="Your Email">
+
+</div>
+<button type="submit" class="btn btn-danger">Subscribe</button>
+
+</form>
+
+</div>
+
+
+	</div>
+
+</div>
 
 	<!--- Fixed background -->
 
